// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components - common - Calendar => Test calendar with prop holidayData 1`] = `
<div>
  <section
    class="calendar-common"
  >
    <div
      class="labeled-calendar"
    >
      <h2
        class="com-text --title --font-bold --4xs"
      >
        <span
          class="com-text"
        >
          Mayo
        </span>
      </h2>
      <div
        class="days-of-week"
      >
        <h2
          class="com-text --font-bold --4xs"
        >
          L
        </h2>
        <h2
          class="com-text --font-bold --4xs"
        >
          M
        </h2>
        <h2
          class="com-text --font-bold --4xs"
        >
          M
        </h2>
        <h2
          class="com-text --font-bold --4xs"
        >
          J
        </h2>
        <h2
          class="com-text --font-bold --4xs"
        >
          V
        </h2>
        <h2
          class="com-text --font-bold --4xs"
        >
          S
        </h2>
        <h2
          class="com-text --font-bold --4xs"
        >
          D
        </h2>
      </div>
    </div>
    <div
      class="date-calendar"
    >
      <span
        class="com-text"
      >
         
      </span>
      <span
        class="com-text"
      >
         
      </span>
      <span
        class="com-text"
      >
         
      </span>
      <span
        class="com-text"
      >
         
      </span>
      <span
        class="com-text"
      >
         
      </span>
      <span
        class="com-text"
      >
         
      </span>
      <span
        class="com-text --transferable"
      >
        1
      </span>
      <span
        class="com-text"
      >
        2
      </span>
      <span
        class="com-text"
      >
        3
      </span>
      <span
        class="com-text"
      >
        4
      </span>
      <span
        class="com-text"
      >
        5
      </span>
      <span
        class="com-text"
      >
        6
      </span>
      <span
        class="com-text"
      >
        7
      </span>
      <span
        class="com-text"
      >
        8
      </span>
      <span
        class="com-text"
      >
        9
      </span>
      <span
        class="com-text"
      >
        10
      </span>
      <span
        class="com-text"
      >
        11
      </span>
      <span
        class="com-text"
      >
        12
      </span>
      <span
        class="com-text"
      >
        13
      </span>
      <span
        class="com-text"
      >
        14
      </span>
      <span
        class="com-text"
      >
        15
      </span>
      <span
        class="com-text"
      >
        16
      </span>
      <span
        class="com-text"
      >
        17
      </span>
      <span
        class="com-text"
      >
        18
      </span>
      <span
        class="com-text"
      >
        19
      </span>
      <span
        class="com-text"
      >
        20
      </span>
      <span
        class="com-text"
      >
        21
      </span>
      <span
        class="com-text"
      >
        22
      </span>
      <span
        class="com-text"
      >
        23
      </span>
      <span
        class="com-text"
      >
        24
      </span>
      <span
        class="com-text --immovable"
      >
        25
      </span>
      <span
        class="com-text"
      >
        26
      </span>
      <span
        class="com-text"
      >
        27
      </span>
      <span
        class="com-text"
      >
        28
      </span>
      <span
        class="com-text"
      >
        29
      </span>
      <span
        class="com-text"
      >
        30
      </span>
      <span
        class="com-text"
      >
        31
      </span>
    </div>
  </section>
</div>
`;

exports[`Components - common - Calendar => Test calendar without props 1`] = `
<div>
  <section
    class="calendar-common"
  >
    <div
      class="labeled-calendar"
    >
      <h2
        class="com-text --title --font-bold --4xs"
      >
        <span
          class="com-text"
        >
          noviembre
        </span>
      </h2>
      <div
        class="days-of-week"
      >
        <h2
          class="com-text --font-bold --4xs"
        >
          L
        </h2>
        <h2
          class="com-text --font-bold --4xs"
        >
          M
        </h2>
        <h2
          class="com-text --font-bold --4xs"
        >
          M
        </h2>
        <h2
          class="com-text --font-bold --4xs"
        >
          J
        </h2>
        <h2
          class="com-text --font-bold --4xs"
        >
          V
        </h2>
        <h2
          class="com-text --font-bold --4xs"
        >
          S
        </h2>
        <h2
          class="com-text --font-bold --4xs"
        >
          D
        </h2>
      </div>
    </div>
    <div
      class="date-calendar"
    >
      <span
        class="com-text"
      >
         
      </span>
      <span
        class="com-text"
      >
        1
      </span>
      <span
        class="com-text"
      >
        2
      </span>
      <span
        class="com-text"
      >
        3
      </span>
      <span
        class="com-text"
      >
        4
      </span>
      <span
        class="com-text"
      >
        5
      </span>
      <span
        class="com-text"
      >
        6
      </span>
      <span
        class="com-text"
      >
        7
      </span>
      <span
        class="com-text"
      >
        8
      </span>
      <span
        class="com-text"
      >
        9
      </span>
      <span
        class="com-text"
      >
        10
      </span>
      <span
        class="com-text"
      >
        11
      </span>
      <span
        class="com-text"
      >
        12
      </span>
      <span
        class="com-text"
      >
        13
      </span>
      <span
        class="com-text"
      >
        14
      </span>
      <span
        class="com-text"
      >
        15
      </span>
      <span
        class="com-text"
      >
        16
      </span>
      <span
        class="com-text"
      >
        17
      </span>
      <span
        class="com-text"
      >
        18
      </span>
      <span
        class="com-text"
      >
        19
      </span>
      <span
        class="com-text"
      >
        20
      </span>
      <span
        class="com-text"
      >
        21
      </span>
      <span
        class="com-text"
      >
        22
      </span>
      <span
        class="com-text"
      >
        23
      </span>
      <span
        class="com-text"
      >
        24
      </span>
      <span
        class="com-text"
      >
        25
      </span>
      <span
        class="com-text"
      >
        26
      </span>
      <span
        class="com-text"
      >
        27
      </span>
      <span
        class="com-text"
      >
        28
      </span>
      <span
        class="com-text"
      >
        29
      </span>
      <span
        class="com-text"
      >
        30
      </span>
    </div>
  </section>
</div>
`;
